--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Raleway&family=Shadows+Into+Light&display=swap);
 /*! tailwindcss v2.2.7 | MIT License | https://tailwindcss.com */
 
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
@@ -22350,6 +22350,10 @@ video {
 
 .font-cursive-recipes {
   font-family: Shadows Into Light, cursive;
+}
+
+.font-serif {
+  font-family: ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
 }
 
 .text-xs {
@@ -53599,6 +53603,10 @@ video {
     font-family: Shadows Into Light, cursive;
   }
 
+  .sm\:font-serif {
+    font-family: ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+  }
+
   .sm\:text-xs {
     font-size: 0.75rem;
     line-height: 1rem;
@@ -84832,6 +84840,10 @@ video {
 
   .md\:font-cursive-recipes {
     font-family: Shadows Into Light, cursive;
+  }
+
+  .md\:font-serif {
+    font-family: ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
   }
 
   .md\:text-xs {
@@ -116069,6 +116081,10 @@ video {
     font-family: Shadows Into Light, cursive;
   }
 
+  .lg\:font-serif {
+    font-family: ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+  }
+
   .lg\:text-xs {
     font-size: 0.75rem;
     line-height: 1rem;
@@ -147304,6 +147320,10 @@ video {
     font-family: Shadows Into Light, cursive;
   }
 
+  .xl\:font-serif {
+    font-family: ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+  }
+
   .xl\:text-xs {
     font-size: 0.75rem;
     line-height: 1rem;
@@ -178537,6 +178557,10 @@ video {
 
   .\32xl\:font-cursive-recipes {
     font-family: Shadows Into Light, cursive;
+  }
+
+  .\32xl\:font-serif {
+    font-family: ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
   }
 
   .\32xl\:text-xs {
